--- a/templates/answers.erb
+++ b/templates/answers.erb
@@ -1,7 +1,9 @@
 # action=setup
 [environment:default]
-OVESETUP_CORE/engineStop=none:None
+OVESETUP_CONFIG/updateFirewall=bool:True
 OVESETUP_DIALOG/confirmSettings=bool:True
+OVESETUP_CONFIG/remoteEngineSetupStyle=none:None
+OVESETUP_CORE/engineStop=none:None
 OVESETUP_DB/database=str:engine
 OVESETUP_DB/fixDbViolations=none:None
 OVESETUP_DB/secured=bool:False
@@ -16,7 +18,8 @@ OVESETUP_CONFIG/isoDomainName=str:<%= @iso_domain_name %>
 OVESETUP_CONFIG/isoDomainMountPoint=str:<%= @iso_domain_mount_point %>
 OVESETUP_CONFIG/adminPassword=str:<%= @admin_password %>
 OVESETUP_CONFIG/applicationMode=str:<%= @application_mode %>
-OVESETUP_CONFIG/firewallManager=str:<%= @firewall_manager %>
+OVESETUP_CONFIG/firewallManager=str:iptables
+VESETUP_CONFIG/updateFirewall=bool:True
 OVESETUP_CONFIG/websocketProxyConfig=none:None
 OVESETUP_CONFIG/fqdn=str:<%= @fqdn %>
 OVESETUP_CONFIG/storageType=str:<%= @storage_type %>
@@ -25,5 +28,12 @@ OVESETUP_APACHE/configureRootRedirection=bool:True
 OVESETUP_APACHE/configureSsl=bool:True
 OSETUP_RPMDISTRO/requireRollback=none:None
 OSETUP_RPMDISTRO/enableUpgrade=none:None
-OVESETUP_AIO/configure=none:None
-OVESETUP_AIO/storageDomainDir=none:None
+OVESETUP_ENGINE_CORE/enable=bool:True
+OVESETUP_SYSTEM/memCheckEnabled=bool:False
+OVESETUP_CONFIG/websocketProxyConfig=bool:True
+OVESETUP_CONFIG/storageIsLocal=bool:Falsei
+OVESETUP_CORE/engineStop=none:None
+OVESETUP_SYSTEM/memCheckEnabled=bool:False
+OVESETUP_CONFIG/isoDomainMountPoint=str:/var/lib/exports/iso
+OVESETUP_CONFIG/isoDomainACL=str:<%= @fqdn %>(rw)
+OVESETUP_CONFIG/updateFirewall=bool:True
