--- a/templates/import_template_to_vm.erb
+++ b/templates/import_template_to_vm.erb
@@ -3,35 +3,35 @@ import subprocess
 import sys
 import time
 #=======Engine config===========
-URL =                    '<%= @url %>' #'https://localhost:443'
-USERNAME =               '<%= @username %>' #'admin@internal'
-PASSWORD =               '<%= @password %>' #'redhat'
-##=============================
+URL = '<%= @url %>'  # 'https://localhost:443'
+USERNAME = '<%= @username %>'  # 'admin@internal'
+PASSWORD = '<%= @password %>'  # 'redhat'
+# =============================
 #
-##=======DC/Cluster config===========
-DC_NAME =                '<%= @dc_name %>' #'my_datacenter'
-CLUSTER_NAME =           '<%= @cluster_name %>' #'my_cluster'
-HOST_NAME =              '<%= @host_name %>' #'my_host'
-CPU_TYPE =               '<%= @cpu_type %>' #'Intel Nehalem Family'
-##=============================
+# =======DC/Cluster config===========
+DC_NAME = '<%= @dc_name %>'  # 'my_datacenter'
+CLUSTER_NAME = '<%= @cluster_name %>'  # 'my_cluster'
+HOST_NAME = '<%= @host_name %>'  # 'my_host'
+CPU_TYPE = '<%= @cpu_type %>'  # 'Intel Nehalem Family'
+# =============================
 #
-##=======host config===========
-HOST_ADDRESS =           '<%= @host_address %>' #'192.168.112.218'
-ROOT_PASSWORD =          '<%= @root_password %>' #'redhat'
-##=============================
+# =======host config===========
+HOST_ADDRESS = '<%= @host_address %>'  # '192.168.112.218'
+ROOT_PASSWORD = '<%= @root_password %>'  # 'redhat'
+# =============================
 #
-##=======storage config===========
-DATA_STORAGE_ADDRESS =   '<%= @storage_address %>' #'192.168.0.101'
-DATA_SHARE_PATH =        '<%= @storage_path%>' #'/usr/share/nfs/data2'
-DATA_STORAGE_NAME =      '<%= @storage_name %>' #'my_storage'
-EXPORT_STORAGE_ADDRESS = '<%= @export_address %>' #'192.168.0.101'
-EXPORT_SHARE_PATH =      '<%= @export_path %>'
-EXPORT_STORAGE_NAME =    '<%= @export_name %>' #'my_export'
-STORAGE_TYPE =           '<%= @storage_type %>' #'nfs'
-ISO_STORAGE_NAME =       'ISO_DOMAIN'
-TEMPLATE_NAME =		 '<%= @template_name %>' 
+# =======storage config===========
+DATA_STORAGE_ADDRESS = '<%= @storage_address %>'  # '192.168.0.101'
+DATA_SHARE_PATH = '<%= @storage_path%>'  # '/usr/share/nfs/data2'
+DATA_STORAGE_NAME = '<%= @storage_name %>'  # 'my_storage'
+EXPORT_STORAGE_ADDRESS = '<%= @export_address %>'  # '192.168.0.101'
+EXPORT_SHARE_PATH = '<%= @export_path %>'
+EXPORT_STORAGE_NAME = '<%= @export_name %>'  # 'my_export'
+STORAGE_TYPE = '<%= @storage_type %>'  # 'nfs'
+ISO_STORAGE_NAME = 'ISO_DOMAIN'
+TEMPLATE_NAME = '<%= @template_name %>'
 VM_NAME = 'CMFE'
-##=============================
+# =============================
 #
 try:
     from ovirtsdk.api import API
@@ -50,18 +50,21 @@ except:
 
 def run_command(cmd):
     print "Running: %s" % (cmd)
-    handle = subprocess.Popen(cmd, stdout=subprocess.PIPE, stderr=subprocess.PIPE, shell=True)
+    handle = subprocess.Popen(
+        cmd, stdout=subprocess.PIPE, stderr=subprocess.PIPE, shell=True)
     out_msg, err_msg = handle.communicate(None)
     return handle.returncode, out_msg, err_msg
 
-#if __name__ == "__main__":
+# if __name__ == "__main__":
+
+
 def import_template():
-#    for env_var in [ENV_IP, ENV_USERNAME, ENV_PASSWORD]:
-#        if env_var not in os.environ:
-#            print "Please re-run after you have set an environment variable for '%s'" % (env_var)
-#            sys.exit()
+    #    for env_var in [ENV_IP, ENV_USERNAME, ENV_PASSWORD]:
+    #        if env_var not in os.environ:
+    #            print "Please re-run after you have set an environment variable for '%s'" % (env_var)
+    #            sys.exit()
     password = PASSWORD
-    username = USERNAME 
+    username = USERNAME
     url = URL
 
     api = API(url=url, username=username, password=password, insecure=True)
@@ -115,10 +118,11 @@ def import_template():
     storage_domain = api.storagedomains.get(storage_domain_name)
     cluster = api.clusters.get(name=cluster_name)
 
-    import_template_params = params.Action(storage_domain=storage_domain, 
-        cluster=cluster)
-	
-    api.storagedomains.get(export_domain_name).templates.get(imported_template_name).import_template(import_template_params)
+    import_template_params = params.Action(storage_domain=storage_domain,
+                                           cluster=cluster)
+
+    api.storagedomains.get(export_domain_name).templates.get(
+        imported_template_name).import_template(import_template_params)
 
 #   export_domain.templates.get(imported_vm_name).import(import_template_params)
     print 'Template was imported successfully'
@@ -126,35 +130,38 @@ def import_template():
     while api.templates.get(imported_template_name).status.state != 'ok':
         time.sleep(1)
 
+
 def create_vm_from_template():
-   try:
-       api.vms.add(params.VM(name=VM_NAME, cluster=api.clusters.get(CLUSTER_NAME), template=api.templates.get(TEMPLATE_NAME)) )
-       print 'VM was created from Template successfully'
-       print 'Waiting for VM to reach Down status'
-       while api.vms.get(VM_NAME).status.state != 'down':
-           time.sleep(1)
-   except Exception as e:
-       print 'Failed to create VM from Template:\n%s' % str(e)
+    try:
+        api.vms.add(params.VM(name=VM_NAME, cluster=api.clusters.get(
+            CLUSTER_NAME), template=api.templates.get(TEMPLATE_NAME)))
+        print 'VM was created from Template successfully'
+        print 'Waiting for VM to reach Down status'
+        while api.vms.get(VM_NAME).status.state != 'down':
+            time.sleep(1)
+    except Exception as e:
+        print 'Failed to create VM from Template:\n%s' % str(e)
+
 
 def add_disk_to_vm():
-   MB = 1024*1024
-   GB = 1024*MB
-   try:
-       api.vms.get(VM_NAME).disks.add(params.Disk(storage_domains=params.StorageDomains(storage_domain=[api.storagedomains.get(DATA_STORAGE_NAME)]),
-                                                   size=40*GB,
-						   status=None,
+    MB = 1024 * 1024
+    GB = 1024 * MB
+    try:
+        api.vms.get(VM_NAME).disks.add(params.Disk(storage_domains=params.StorageDomains(storage_domain=[api.storagedomains.get(DATA_STORAGE_NAME)]),
+                                                   size=40 * GB,
+                                                   status=None,
                                                    interface='virtio',
                                                    format='cow',
                                                    sparse=True,
-						   name='DB_disk',
+                                                   name='DB_disk',
                                                    bootable=False))
-       print 'Disk added to VM'
-       print 'Waiting for VM to reach Down status'
-       while api.vms.get(VM_NAME).status.state != 'down':
-           time.sleep(1)
-   
-   except Exception as e:
-       print 'Failed to create VM with disk and NIC\n%s' % str(e)
+        print 'Disk added to VM'
+        print 'Waiting for VM to reach Down status'
+        while api.vms.get(VM_NAME).status.state != 'down':
+            time.sleep(1)
+
+    except Exception as e:
+        print 'Failed to create VM with disk and NIC\n%s' % str(e)
 
 api = API(url=URL, username=USERNAME, password=PASSWORD, insecure=True)
 import_template()
